-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21
-
Component/s: hotspot
-
b08
The following test failed in the JDK21 CI:
java/util/Arrays/HashCode.java
Here's a snippet from the log file:
#section:main
----------messages:(6/362)----------
command: main --add-exports java.base/jdk.internal.util=ALL-UNNAMED -Xcomp -Xbatch HashCode
reason: User specified action: run main/othervm --add-exports java.base/jdk.internal.util=ALL-UNNAMED -Xcomp -Xbatch HashCode
started: Wed Jan 25 07:33:31 GMT 2023
Mode: othervm [/othervm specified]
finished: Wed Jan 25 07:34:32 GMT 2023
elapsed time (seconds): 60.652
----------configuration:(3/67)----------
Boot Layer
add exports: java.base/jdk.internal.util ALL-UNNAMED
----------System.out:(21/1777)----------
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/library_call.cpp:137
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S85856/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c344b625-6ec2-4442-aaf0-fd693fc54a6d/runs/fef4c973-9ed3-4208-bfa2-30ec084d56da/workspace/open/src/hotspot/share/opto/library_call.cpp:137), pid=62025, tid=22531
# assert(ctrl == kit.control()) failed: Control flow was added although the intrinsic bailed out
#
# JRE version: Java(TM) SE Runtime Environment (21.0+7) (fastdebug build 21-ea+7-LTS-407)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+7-LTS-407, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)
# Core dump will be written. Default location: core.62025
#
# An error report file with more information is saved as:
# /System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S85863/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/34cba6ef-59c3-4d56-b1aa-429feb6c38f1/runs/61b21536-143d-478a-8abe-112844f3b076/testoutput/test-support/jtreg_open_test_jdk_jdk_util/scratch/1/hs_err_pid62025.log
#
# Compiler replay data is saved as:
# /System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S85863/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/34cba6ef-59c3-4d56-b1aa-429feb6c38f1/runs/61b21536-143d-478a-8abe-112844f3b076/testoutput/test-support/jtreg_open_test_jdk_jdk_util/scratch/1/replay_pid62025.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(0/0)----------
----------rerun:(49/6510)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007fd4c203ca10): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=22531, stack(0x0000700004ff6000,0x00007000050f6000)]
Current CompileTask:
C2: 27192 3361 b java.lang.invoke.LambdaForm$MH/0x0000000801007c00::invoke (141 bytes)
Stack: [0x0000700004ff6000,0x00007000050f6000], sp=0x00007000050f2db0, free space=1011k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x1291279] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x739 (library_call.cpp:137)
V [libjvm.dylib+0x12918db] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x3b
V [libjvm.dylib+0x6ce53d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.dylib+0xcfe5cd] LibraryIntrinsic::generate(JVMState*)+0x40d
V [libjvm.dylib+0x7890b7] Parse::do_call()+0xbd7
V [libjvm.dylib+0xf98202] Parse::do_one_bytecode()+0x232
V [libjvm.dylib+0xf8893c] Parse::do_one_block()+0x43c
V [libjvm.dylib+0xf869d9] Parse::do_all_blocks()+0x3a9
V [libjvm.dylib+0xf8298b] Parse::Parse(JVMState*, ciMethod*, float)+0xc1b
V [libjvm.dylib+0x51b3da] ParseGenerator::generate(JVMState*)+0xaa
V [libjvm.dylib+0x7890b7] Parse::do_call()+0xbd7
V [libjvm.dylib+0xf98202] Parse::do_one_bytecode()+0x232
V [libjvm.dylib+0xf8893c] Parse::do_one_block()+0x43c
V [libjvm.dylib+0xf869d9] Parse::do_all_blocks()+0x3a9
V [libjvm.dylib+0xf8298b] Parse::Parse(JVMState*, ciMethod*, float)+0xc1b
V [libjvm.dylib+0x51b3da] ParseGenerator::generate(JVMState*)+0xaa
V [libjvm.dylib+0x636286] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x15b6
V [libjvm.dylib+0x5190c7] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x167
V [libjvm.dylib+0x654cdb] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x63b
V [libjvm.dylib+0x654498] CompileBroker::compiler_thread_loop()+0x288
V [libjvm.dylib+0xa183bf] JavaThread::thread_main_inner()+0x1ff
V [libjvm.dylib+0x11dab67] Thread::call_run()+0x177
V [libjvm.dylib+0xf509af] thread_native_entry(Thread*)+0x14f
C [libsystem_pthread.dylib+0x64e1] _pthread_start+0x7d
C [libsystem_pthread.dylib+0x1f6b] thread_start+0xf
java/util/Arrays/HashCode.java
Here's a snippet from the log file:
#section:main
----------messages:(6/362)----------
command: main --add-exports java.base/jdk.internal.util=ALL-UNNAMED -Xcomp -Xbatch HashCode
reason: User specified action: run main/othervm --add-exports java.base/jdk.internal.util=ALL-UNNAMED -Xcomp -Xbatch HashCode
started: Wed Jan 25 07:33:31 GMT 2023
Mode: othervm [/othervm specified]
finished: Wed Jan 25 07:34:32 GMT 2023
elapsed time (seconds): 60.652
----------configuration:(3/67)----------
Boot Layer
add exports: java.base/jdk.internal.util ALL-UNNAMED
----------System.out:(21/1777)----------
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/library_call.cpp:137
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S85856/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c344b625-6ec2-4442-aaf0-fd693fc54a6d/runs/fef4c973-9ed3-4208-bfa2-30ec084d56da/workspace/open/src/hotspot/share/opto/library_call.cpp:137), pid=62025, tid=22531
# assert(ctrl == kit.control()) failed: Control flow was added although the intrinsic bailed out
#
# JRE version: Java(TM) SE Runtime Environment (21.0+7) (fastdebug build 21-ea+7-LTS-407)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+7-LTS-407, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)
# Core dump will be written. Default location: core.62025
#
# An error report file with more information is saved as:
# /System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S85863/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/34cba6ef-59c3-4d56-b1aa-429feb6c38f1/runs/61b21536-143d-478a-8abe-112844f3b076/testoutput/test-support/jtreg_open_test_jdk_jdk_util/scratch/1/hs_err_pid62025.log
#
# Compiler replay data is saved as:
# /System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S85863/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/34cba6ef-59c3-4d56-b1aa-429feb6c38f1/runs/61b21536-143d-478a-8abe-112844f3b076/testoutput/test-support/jtreg_open_test_jdk_jdk_util/scratch/1/replay_pid62025.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(0/0)----------
----------rerun:(49/6510)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007fd4c203ca10): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=22531, stack(0x0000700004ff6000,0x00007000050f6000)]
Current CompileTask:
C2: 27192 3361 b java.lang.invoke.LambdaForm$MH/0x0000000801007c00::invoke (141 bytes)
Stack: [0x0000700004ff6000,0x00007000050f6000], sp=0x00007000050f2db0, free space=1011k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x1291279] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x739 (library_call.cpp:137)
V [libjvm.dylib+0x12918db] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x3b
V [libjvm.dylib+0x6ce53d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.dylib+0xcfe5cd] LibraryIntrinsic::generate(JVMState*)+0x40d
V [libjvm.dylib+0x7890b7] Parse::do_call()+0xbd7
V [libjvm.dylib+0xf98202] Parse::do_one_bytecode()+0x232
V [libjvm.dylib+0xf8893c] Parse::do_one_block()+0x43c
V [libjvm.dylib+0xf869d9] Parse::do_all_blocks()+0x3a9
V [libjvm.dylib+0xf8298b] Parse::Parse(JVMState*, ciMethod*, float)+0xc1b
V [libjvm.dylib+0x51b3da] ParseGenerator::generate(JVMState*)+0xaa
V [libjvm.dylib+0x7890b7] Parse::do_call()+0xbd7
V [libjvm.dylib+0xf98202] Parse::do_one_bytecode()+0x232
V [libjvm.dylib+0xf8893c] Parse::do_one_block()+0x43c
V [libjvm.dylib+0xf869d9] Parse::do_all_blocks()+0x3a9
V [libjvm.dylib+0xf8298b] Parse::Parse(JVMState*, ciMethod*, float)+0xc1b
V [libjvm.dylib+0x51b3da] ParseGenerator::generate(JVMState*)+0xaa
V [libjvm.dylib+0x636286] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x15b6
V [libjvm.dylib+0x5190c7] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x167
V [libjvm.dylib+0x654cdb] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x63b
V [libjvm.dylib+0x654498] CompileBroker::compiler_thread_loop()+0x288
V [libjvm.dylib+0xa183bf] JavaThread::thread_main_inner()+0x1ff
V [libjvm.dylib+0x11dab67] Thread::call_run()+0x177
V [libjvm.dylib+0xf509af] thread_native_entry(Thread*)+0x14f
C [libsystem_pthread.dylib+0x64e1] _pthread_start+0x7d
C [libsystem_pthread.dylib+0x1f6b] thread_start+0xf
- relates to
-
JDK-8282664 Unroll by hand StringUTF16 and StringLatin1 polynomial hash loops
-
- Resolved
-