8301093: C2 fails assert(ctrl == kit.control()) failed: Control flow was added although the intrinsic bailed out

Reviewed-by: thartmann, kvn